arrays variables properties

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>
-            Parachichi
-        </title>
+        <meta charset="UTF-8">
+        <meta name="vieport" content="width=device-width,initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Parachichi</title>
     </head>
     <body>
         <h1>A wise avocado once said, "to live is to learn."</h1>
+        <script src="learningjs.js"></script>
     </body>
-    <script src="learningjs.js"></script>
 </html>
